[tool.poetry]
name = "gazelle"
version = "0.1.0"
readme = "README.md"
license = "AGPL-3.0-or-later"
documentation = "https://docs.gazelle.sh"
repository = "https://github.com/gazellekit/gazelle.git"
authors = ["James S. Bayley <https://www.linkedin.com/in/jsbayley>"]
description = "A fast, open-source engine for civil engineers."
packages = [{ include = "bindings/python" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"
pytest = "^8.2.0"
ruff = "^0.4.2"

[tool.ruff]
indent-width = 2

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"